--- a/CSS/home.css
+++ b/CSS/home.css
@@ -17,6 +17,7 @@
   --bg-color-bar2: #caccf7;
   --bg-color-bar3: #828aed;
   --bg-color-bar4: #4a4de6;
+  --bg-color-bar5: #2356e1;
   /* Text color */
   --text-white: #ffffff;
   --text-orange: #e6881d;
@@ -334,22 +335,188 @@ i {
 /* Fim estilização do header */
 
 /* Início da estilização dos cards */
+/* Card 1 */
+.container .content .card1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .container .content .card1 .profile {
   display: flex;
-  padding: 1rem;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1rem 2rem;
   gap: 1rem;
-  border: solid 1px;
-}
-.container .content .card1 .profile .avatar {
-  display: flex;
-  justify-content: space-around;
 }
 
 .container .content .card1 .profile .avatar img {
-  width: 3rem;
-  height: 3rem;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
 }
+
+.container .content .card1 .profile .text {
+  width: 60%;
+}
+
+.container .content .card1 .profile .icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--text-green);
+}
+
+.container .content .card1 .profile .icon i {
+  font-size: 2rem;
+}
+
+.container .content .card1 .bar {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 0 0 2rem;
+  width: 100%;
+}
+
+.container .content .card1 .bar .text h4 {
+  font-size: 1rem;
+}
+
+.container .content .card1 .bar .progress {
+  display: flex;
+  width: 90%;
+  height: 0.4rem;
+  border-radius: 2rem;
+  background: var(--bg-color-bar2);
+}
+
+.container .content .card1 .progress .bar {
+  width: 30%;
+  border-radius: 2rem;
+  background: var(--bg-color-bar5);
+}
+/* Fim Card 1 */
+
+/* Card 2 */
+.container .content .card2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.container .content .card2 .profile {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1rem 2rem;
+  gap: 1rem;
+}
+
+.container .content .card2 .profile .avatar img {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+}
+
+.container .content .card2 .profile .text {
+  width: 60%;
+}
+
+.container .content .card2 .profile .icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--text-red);
+}
+
+.container .content .card2 .profile .icon i {
+  font-size: 2rem;
+}
+
+.container .content .card2 .bar {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 0 0 2rem;
+  width: 100%;
+}
+
+.container .content .card2 .bar .text h4 {
+  font-size: 1rem;
+}
+
+.container .content .card2 .bar .progress {
+  display: flex;
+  width: 90%;
+  height: 0.4rem;
+  border-radius: 2rem;
+  background: var(--bg-color-bar2);
+}
+
+.container .content .card2 .progress .bar {
+  width: 70%;
+  border-radius: 2rem;
+  background: var(--bg-color-bar5);
+}
+/* Fim Card 2 */
+
+/* Card 1 */
+.container .content .card3 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.container .content .card3 .profile {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1rem 2rem;
+  gap: 1rem;
+}
+
+.container .content .card3 .profile .avatar img {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+}
+
+.container .content .card3 .profile .text {
+  width: 60%;
+}
+
+.container .content .card3 .profile .icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--text-green);
+}
+
+.container .content .card3 .profile .icon i {
+  font-size: 2rem;
+}
+
+.container .content .card3 .bar {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 0 0 2rem;
+  width: 100%;
+}
+
+.container .content .card3 .bar .text h4 {
+  font-size: 1rem;
+}
+
+.container .content .card3 .bar .progress {
+  display: flex;
+  width: 90%;
+  height: 0.4rem;
+  border-radius: 2rem;
+  background: var(--bg-color-bar2);
+}
+
+.container .content .card3 .progress .bar {
+  width: 90%;
+  border-radius: 2rem;
+  background: var(--bg-color-bar5);
+}
+/* Fim Card 1 */
 /* -------------------------------------------------------------------------------------------------- */
 
 /* Início Media Query (Responsividade) */
