--- a/CSS/formProduct.css
+++ b/CSS/formProduct.css
@@ -264,14 +264,13 @@ i {
 .container .content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 5rem repeat(2, 1fr) 3fr;
+  grid-template-rows: 5rem repeat(2, 2fr) 5rem;
   background: var(--bg-color-content);
   border-radius: 0 2rem 2rem 0;
   gap: 2rem;
   padding: 2rem;
   width: 100%;
 }
-/* Fim da estilização do grid */
 
 /* Estilização do Header */
 .container .content .header {
@@ -284,10 +283,54 @@ i {
 }
 /* Fim da Estilização do Header */
 
+/* Estilização dos Box */
+.container .content .box1 {
+  grid-column: 2/4;
+  grid-row: 2/3;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.container .content .box2 {
+  grid-column: 1/2;
+  grid-row: 3/4;
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.container .content .box3 {
+  grid-column: 2/3;
+  grid-row: 3/4;
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.container .content .box4 {
+  grid-column: 3/4;
+  grid-row: 3/4;
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.container .content .box5 {
+  grid-column: 1/4;
+  grid-row: 4/5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* Fim estilização do Box */
+/* Fim da estilização do grid */
+
 /* Estilização da div da imagem */
 .container .content .image {
   grid-column: 1/2;
-  grid-row: 2/4;
+  grid-row: 2/3;
   display: flex;
   align-items: flex-end;
   border: solid 1px var(--bg-color-border);
@@ -305,52 +348,75 @@ i {
 }
 /* Fim da estilização da div da imagem */
 
-.container .content .box1 {
-  grid-column: 2/4;
-  grid-row: 2/4;
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.container .content .box1 .nome {
+/* Estilização dos inputs */
+/* Início Box 1 */
+.container .content .box1 .nome,
+.descricao {
   width: 100%;
   font-size: 1.5rem;
 }
 
-.container .content .box1 .nome input {
+.container .content .box1 input {
   font-size: 1.5rem;
   border-radius: 1rem;
   width: 100%;
 }
+/* Fim Box 1 */
 
-.container .content .box1 .descricao {
+/* Início Box 2 */
+.container .content .box2 .codigo,
+.marca,
+.categoria {
+  width: 100%;
   font-size: 1.5rem;
 }
 
-.container .content .box2 {
-  grid-column: 1/2;
-  grid-row: 4/5;
-  border: solid 1px;
+.container .content .box2 input {
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  width: 100%;
+}
+/* Fim Box 2 */
+
+/* Início Box 3 */
+.container .content .box3 .unidade,
+.quantidade,
+.custo {
+  width: 100%;
+  font-size: 1.5rem;
 }
 
-.container .content .box3 {
-  grid-column: 2/3;
-  grid-row: 4/5;
-  border: solid 1px;
+.container .content .box3 input {
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  width: 100%;
+}
+/* Fim box 3 */
+
+/* Início Box 4 */
+.container .content .box4 .fornecedor,
+.precofornecedor,
+.precominimo {
+  width: 100%;
+  font-size: 1.5rem;
 }
 
-.container .content .box4 {
-  grid-column: 3/4;
-  grid-row: 4/5;
-  border: solid 1px;
+.container .content .box4 input {
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  width: 100%;
 }
-/* Início Header */
+/* Fim Box 4 */
 
-/* Fim Header */
-
-/* Início Form */
+/* Início Box 5 */
+.container .content .box5 .btn {
+  padding: 1rem 3rem;
+  border-radius: 1rem;
+  font-size: 1.5rem;
+  background: var(--bg-color-button);
+  color: var(--text-white);
+}
+/* Fim Box 5 */
 
 /* Fim formulário */
 /* -------------------------------------------------------------------------------------------------- */
