--- a/CSS/formProduct.css
+++ b/CSS/formProduct.css
@@ -420,7 +420,6 @@ i {
 
 /* Fim formulário */
 /* -------------------------------------------------------------------------------------------------- */
-
 /* Início Media Query (Responsividade) */
 
 /* Início responsividade telas menores */
@@ -471,6 +470,8 @@ i {
   }
 }
 /* Fim Media Query telas menores */
+
+/* -------------------------------------------------------------------------------------------------- */
 
 /* Início Media Query telas médias */
 @media (min-width: 250px) and (max-width: 1000px) {
@@ -570,4 +571,52 @@ i {
     display: none;
   }
   /* Fim Responsividade avatar de login */
+
+  /* Responsividade do Formulário */
+  .container .content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 5rem repeat(3, 1fr) 5rem;
+  }
+
+  .container .content .header {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    font-size: 2rem;
+  }
+
+  .container .content .image {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .container .content .box1 {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  .container .content .box1 textarea {
+    width: 100%;
+  }
+
+  .container .content .box2 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+
+  .container .content .box3 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+
+  .container .content .box4 {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+
+  .container .content .box5 {
+    grid-column: 1/3;
+    grid-row: 5/6;
+  }
+  /* Fim responsividade do Formulário */
 }
